--- a/app/templates/inc/features.html
+++ b/app/templates/inc/features.html
@@ -1,18 +1,18 @@
 <!-- Features Overview -->
 <section id="featuresOverview" class="container my-5">
     <div class="features-overview">
-        <h2 class="text-center mb-5 section-title">Features Overview</h2>
+        <h2 class="text-center mb-5 section-title">Resumen ventajas</h2>
         <div class="accordion" id="featuresAccordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseOne">
-                        Real-time SEO Analysis
+                        Análisis en tiempo real
                     </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show">
                     <div class="accordion-body">
-                        Get real-time insights into keyword rankings, traffic, and competitors.
+                       Analiza competencia y mercados
                     </div>
                 </div>
             </div>
@@ -20,12 +20,12 @@
                 <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseTwo">
-                        Domain & Backlink Monitoring
+                        Análisis de dominios
                     </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse">
                     <div class="accordion-body">
-                        Track your domain's health and backlinks efficiently.
+                        Vigila la salud de tu dominio y sitio web
                     </div>
                 </div>
             </div>
