--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -1,11 +1,12 @@
 <!-- Redesigned Header -->
 <header class="header">
 
-  <!-- Info Bar  -->
+  <!-- Info Bar 
   <div class="info-bar text-center py-2 bg-primary text-white">
     Mo0nLite 🐞 ¿Has encontrado un bug? <a href="#" class="text-warning text-decoration-underline">Reportar error</a>
   </div>
 
+   -->
 
   <!-- Top Bar 
   <div class="top-bar d-flex align-items-right py-2 bg-light">
@@ -14,6 +15,9 @@
     </div>
   </div>
 -->
+<div class="info-bar text-center py-2 bg-primary text-white">
+  <bi>usuario/contraseña para demo:</i> <b>user1/user1</b> - <b>user2 / user2</b> 
+</div>
   <!-- Navbar -->
   {% include 'inc/navbar.html' %}
 </header>
