--- a/app/templates/inc/footer.html
+++ b/app/templates/inc/footer.html
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="col-md-3 footer-column">
         <h6 class="dropdown-header">Conoce Monitor 🧩</h6>
-        <!-- <a class="dropdown-item" href="#"><i class="fas fa-bullhorn"></i> Comunicados</a>
+         <a class="dropdown-item" href="#"><i class="fas fa-bullhorn"></i> Comunicados</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-bullhorn"></i> Equipo</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-history"></i> Historia</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-bullhorn"></i> Tecnologías</a>
@@ -22,11 +22,11 @@
                 <a class="dropdown-item" href="#"><i class="fas fa-life-ring"></i> Contacto</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-life-ring"></i> Atención al cliente</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-life-ring"></i> Reportar un error</a>
-      -->
+      
       </div>
       <div class="col-md-3 footer-column">
         <h6 class="dropdown-header">Planes y Precios 💵</h6>
-        <!-- <a class="dropdown-item" href="#"><i class="fas fa-user-graduate"></i> Plan Estudiante</a>
+         <a class="dropdown-item" href="#"><i class="fas fa-user-graduate"></i> Plan Estudiante</a>
         <a class="dropdown-item" href="#"><i class="fas fa-briefcase"></i> Plan Profesional</a>
         <a class="dropdown-item" href="#"><i class="fas fa-building"></i> Plan Agencia</a>
         <a class="dropdown-item" href="#"><i class="fas fa-suitcase"></i> Plan Corporate</a>
@@ -37,29 +37,29 @@
         <a class="dropdown-item" href="#"><i class="fas fa-handshake"></i> Agencias</a>
         <a class="dropdown-item" href="#"><i class="fas fa-building"></i> Corporativos</a>
         <a class="dropdown-item" href="#"><i class="fas fa-university"></i> Admon. Pública</a>
-        -->
+       
 
       </div>
       <div class="col-md-3 footer-column">
         <h6 class="dropdown-header">Recursos 📚</h6>
-        <!--
+       
         <a class="dropdown-item" href="#"><i class="fas fa-blog"></i> Blog</a>
         <a class="dropdown-item" href="#"><i class="fas fa-book-open"></i> Guías</a>
         <a class="dropdown-item" href="#"><i class="fas fa-book"></i> Nomenclatura</a>
         <a class="dropdown-item" href="#"><i class="fas fa-info-circle"></i> Centro de Ayuda</a>
--->
+
       </div>
 
       <div class="col-md-3 footer-column">
         <h6 class="dropdown-header">Disclaimer ⚖️</h6>
-        <!--
+       
         <a class="dropdown-item" href="#"><i class="fas fa-gavel"></i> Aviso Legal</a>
         <a class="dropdown-item" href="#"><i class="fas fa-file-contract"></i> Términos de uso</a>
         <a class="dropdown-item" href="#"><i class="fas fa-user-secret"></i> Privacidad y Cookies</a>
         <a class="dropdown-item" href="#"><i class="fas fa-shield-alt"></i> Seguridad</a>
         <a class="dropdown-item" href="#"><i class="fas fa-exclamation-triangle"></i> Descargo
           Responsabilidad</a>
-          -->
+          
       </div>
     </div>
   </div>
