--- a/app/templates/tools/domains/results_domains copy.html
+++ b/app/templates/tools/domains/results_domains copy.html
@@ -231,8 +231,8 @@
     <!-- Dashboard Header -->
     <div class="row dashboard-header">
         <div class="col text-center">
-            <h3>Analytics Dashboard<br />{{title}}</h3>
-            <p class="lead">A comprehensive view of your data metrics</p>
+            <h3>Resultados<br />{{title}}</h3>
+            <p class="lead">Una vista completa de tus métricas</p>
         </div>
     </div>
 
