--- a/app/templates/tools/domains/results_domains.html
+++ b/app/templates/tools/domains/results_domains.html
@@ -232,8 +232,8 @@
 <!-- Dashboard Header -->
 <div class="row dashboard-header">
     <div class="col text-center">
-        <h3>Analytics Dashboard<br />{{title}}</h3>
-        <p class="lead">A comprehensive view of your data metrics</p>
+        <h3>Resultados<br />{{title}}</h3>
+        <p class="lead">Una vista completa de tus métricas</p>
     </div>
 </div>
 
@@ -284,7 +284,7 @@
     <div class="overlay">
         <div class="text-center">
             <i class="fas fa-lock fa-3x mb-3"></i>
-            <h3>You need to upgrade your plan to access this feature.
+            <h3>Necesitas actualizar tu plan para acceder a esta función.
                 <div class="d-flex justify-content-center">
                     <a href="#pricing" class="btn btn-primary btn-lg btn-cta me-3">Empezar Gratis</a>
                     <a href="#online-test" class="btn btn-secondary btn-lg me-3">Probar Ahora</a>
