--- a/app/templates/tools/seo/results_seo.html
+++ b/app/templates/tools/seo/results_seo.html
@@ -214,8 +214,8 @@
 <!-- Dashboard Header  -->
 <div class="row dashboard-header">
     <div class="col text-center">
-        <h3>Analytics Dashboard<br />{{title}}</h3>
-        <p class="lead">A comprehensive view of your data metrics</p>
+        <h3>Resultados<br />{{title}}</h3>
+        <p class="lead">Una vista completa de tus métricas</p>
     </div>
 </div>
 
@@ -266,7 +266,7 @@
     <div class="overlay">
         <div class="text-center">
             <i class="fas fa-lock fa-3x mb-3"></i>
-            <h3>You need to upgrade your plan to access this feature.</h3>
+            <h3>YNecesitas actualizar tu plan para acceder a esta función</h3>
             {% include "inc/suscriptions.html" %}
         </div>
     </div>
