--- a/app/templates/tools/usability/usability_results.html
+++ b/app/templates/tools/usability/usability_results.html
@@ -233,8 +233,8 @@
 <!-- Dashboard Header -->
 <div class="row dashboard-header">
     <div class="col text-center">
-        <h3>Analytics Dashboard<br />{{title}}</h3>
-        <p class="lead">A comprehensive view of your data metrics</p>
+        <h3>Resultados<br />{{title}}</h3>
+        <p class="lead">Una vista completa de tus métricas</p>
     </div>
 </div>
 
@@ -283,7 +283,7 @@
     <div class="overlay">
         <div class="text-center">
             <i class="fas fa-lock fa-3x mb-3"></i>
-            <h3>You need to upgrade your plan to access this feature.</h3>
+            <h3>Necesitas actualizar tu plan para acceder a esta función</h3>
         </div>
     </div>
     {% endif %}
